--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Felipe Costa" />
+    <meta
+      name="description"
+      content="Galeria TripleTen"
+      <meta
+      name="author"
+      content="Felipe Costa"
+    />
     <meta name="keywords" content="biblioteca" />
     <title>TripleTen Art Gallery</title>
     <link rel="stylesheet" href="./pages/index.css" />
