--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
           <h2 class="content__title">
             Conheça um pouco mais sobre a localização dos seus amigos
           </h2>
-          <p class="content__text_subtitle">
+          <p class="content__subtitle">
             Cada pessoa é um artista livre, chamado a transformar as condições,
             pensamentos e estruturas que moldam nossas vidas.
           </p>
-          <p class="content__text_author">— Joseph Beuys</p>
-          <p class="content__text_description">
+          <p class="content__author">— Joseph Beuys</p>
+          <p class="content__description">
             A cidade de TripleTen reuniu profissionais de diversos cantos do
             mundo. Hoje, a Galeria de Arte TripleTen tem o orgulho de apresentar
             histórias e fotos de algumas das pessoas que dedicam seu tempo e
