--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
         />
       </header>
       <main class="content">
-        <section class="content__intro">
-          <h2 class="content__title">
+        <section class="intro">
+          <h2 class="intro__title">
             Conheça um pouco mais sobre a localização dos seus amigos
           </h2>
-          <p class="content__subtitle">
+          <p class="intro__subtitle">
             Cada pessoa é um artista livre, chamado a transformar as condições,
             pensamentos e estruturas que moldam nossas vidas.
           </p>
-          <p class="content__author">— Joseph Beuys</p>
-          <p class="content__description">
+          <p class="intro__author">— Joseph Beuys</p>
+          <p class="intro__description">
             A cidade de TripleTen reuniu profissionais de diversos cantos do
             mundo. Hoje, a Galeria de Arte TripleTen tem o orgulho de apresentar
             histórias e fotos de algumas das pessoas que dedicam seu tempo e
@@ -50,9 +50,231 @@
             estamos felizes por você ser nosso vizinho.
           </p>
         </section>
+        <section class="photo-grid">
+          <img
+            class="photo-grid__image"
+            src="./images/image-1.svg"
+            alt="paisagem"
+          />
+          <img
+            class="photo-grid__image"
+            src="./images/image-2.svg"
+            alt="paisagem"
+          />
+          <img
+            class="photo-grid__image"
+            src="./images/image-3.svg"
+            alt="paisagem"
+          />
+          <img
+            class="photo-grid__image"
+            src="./images/image-4.svg"
+            alt="paisagem"
+          />
+          <img
+            class="photo-grid__image"
+            src="./images/image-5.svg"
+            alt="paisagem"
+          />
+          <img
+            class="photo-grid__image"
+            src="./images/image-6.svg"
+            alt="paisagem"
+          />
+          <img
+            class="photo-grid__image"
+            src="./images/image-7.svg"
+            alt="paisagem"
+          />
+          <img
+            class="photo-grid__image"
+            src="./images/image-8.svg"
+            alt="paisagem"
+          />
+        </section>
+        <section class="places">
+          <div class="place">
+            <h2 class="place__title">Criccieth, País de Gales</h2>
+
+            <div class="place__website_div">
+              <p class="place__artist place__artist_title">Artistas</p>
+              <p class="place__artist place__artist_text">
+                Steffan Warren, editor-chefe
+              </p>
+              <p class="place__artist place__artist_text">
+                Kseniya Glagoleva, gerente de projeto
+              </p>
+            </div>
+            <img
+              class="place__image"
+              src="./images/city-1.svg"
+              alt="imagem da cidade de Criccieth"
+            />
+            <div class="place__text_div">
+              <p class="place__paragraph">
+                A ruína medieval do Castelo de Cricieth tem vista para a cidade
+                abaixo de uma rocha que se projeta para o mar. Acredita-se que
+                tenha sido construído por Llewelyn, o Grande, no século XIII.
+                Cerca de 900 anos depois, a auto-intitulada *Pérola de Gales nas
+                margens de Snowdonia* tornou-se um destino turístico popular
+                durante os meses de verão.
+              </p>
+              <p class="place__paragraph">
+                A uma curta caminhada da estrada do castelo, você pode desfrutar
+                do melhor sorvete do mundo no Cadwalader's, cujo ingrediente
+                secreto, segundo rumores, são algas marinhas de origem local.
+                Outra reivindicação à fama é o fato de que Criccieth ganhou o
+                prêmio *Wales in Bloom* por cinco anos consecutivos por suas
+                espetaculares exibições florais pela cidade. Foi também a casa
+                de David Lloyd George, o único galês a ocupar o cargo de
+                primeiro-ministro do Reino Unido.
+              </p>
+            </div>
+            <a
+              class="place__frame"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              target="_blank"
+              >Compre esta obra de arte como NFT</a
+            >
+          </div>
+
+          <div class="place">
+            <div class="place__title_div">
+              <h2 class="place__title">Berea, EUA</h2>
+            </div>
+            <div class="place__website_div">
+              <p class="place__artist place__artist_title">Artistas</p>
+              <p class="place__artist place__artist_text">
+                Travis Turner, autor e editor
+              </p>
+            </div>
+
+            <img
+              class="place__image"
+              src="./images/city-2.svg"
+              alt="imagem da cidade de Berea"
+            />
+
+            <div class="place__text_div">
+              <p class="place__paragraph">
+                Berea é uma pequena cidade localizada na parte central do
+                Kentucky. A cidade é cercada por belas florestas e campos. É
+                conhecida como a capital do artesanato do estado, e os
+                visitantes encontrarão muitas oportunidades de compras: lojas
+                com bijuterias artesanais, velas, artigos de madeira, galerias,
+                ateliês de vidro e muito mais. A cidade realiza um festival
+                anual que celebra o "pão de colher", um prato local feito com
+                pão de milho e servido com uma colher de pau.
+              </p>
+              <p class="place__paragraph">
+                No entanto, provavelmente é mais conhecido pela faculdade local.
+                O Berea College foi fundado em 1855 e foi o primeiro colégio no
+                sul a ser racialmente integrado, bem como o primeiro a ser
+                misto. De forma um tanto singular, não cobra mensalidades - todo
+                aluno recebe uma bolsa de estudos integral.
+              </p>
+            </div>
+            <a
+              class="place__frame"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              target="_blank"
+              >Compre esta obra de arte como NFT</a
+            >
+          </div>
+          <div class="place">
+            <div class="place__title_div">
+              <h2 class="place__title">Muramvya, Burundi</h2>
+            </div>
+            <div class="place__website_div">
+              <p class="place__artist place__artist_title">Artistas</p>
+              <p class="place__artist place__artist_text">
+                Grevisse Kenguruka, editor técnico
+              </p>
+            </div>
+
+            <img
+              class="place__image"
+              src="./images/city-3.svg"
+              alt="imagem da cidade de Muramvya"
+            />
+
+            <div class="place__text_div">
+              <p class="place__paragraph">
+                Muramvya é uma das 18 províncias de Burundi. Na era do reino,
+                Muramvya era a capital real e em 2007, por causa de sua paisagem
+                cultural e natural, foi adicionada à Lista Provisória do
+                Patrimônio Mundial da UNESCO. Está localizada no centro de
+                Burundi, entre as capitais políticas e econômicas do país.
+              </p>
+              <p class="place__paragraph">
+                O clima é bastante frio à noite, mas durante o dia, você
+                pensaria que está no céu. A 2.665 metros (8.743 pés) acima do
+                nível do mar, o Monte Teza é um dos lugares mais frios da
+                província. Mas essa brisa fresca permite uma das maiores
+                plantações de chá e café do país, que representam a maior parte
+                das exportações do Burundi.
+              </p>
+              <p class="place__paragraph">
+                O Parque Nacional de Kibira, uma das maiores reservas de vida
+                selvagem para macacos, se sobrepõe a quatro províncias,
+                incluindo Muramvya. Este Parque Nacional encontra-se no ápice
+                das belas montanhas do Congo-Nile Divide, variando entre 1.550 e
+                2.660 metros de altitude. Está repleta de uma bela vegetação e
+                fonte para os vários rios e riachos que fornecem água em todo o
+                país.
+              </p>
+            </div>
+            <a
+              class="place__frame"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              target="_blank"
+              >Compre esta obra de arte como NFT</a
+            >
+          </div>
+          <div class="place">
+            <div class="place__title_div">
+              <h2 class="place__title">Juruti, Brasil</h2>
+            </div>
+            <div class="place__website_div">
+              <p class="place__artist place__artist_title">Artistas</p>
+              <p class="place__artist place__artist_text">
+                Felipe Costa, Desenvolvedor
+              </p>
+            </div>
+
+            <img
+              class="place__image"
+              src="./images/city-4.jpg"
+              alt="imagem da cidade de Juruti"
+            />
+
+            <div class="place__text_div">
+              <p class="place__paragraph">
+                Juruti, no Pará, é conhecida por sua rica biodiversidade e pela
+                produção de bauxita, mineral utilizado na fabricação de
+                alumínio. A cidade está localizada entre os rios Amazonas e
+                Trombetas, o que facilita a navegação e o acesso à região, sendo
+                também um ponto importante para o ecoturismo, com atrações como
+                o Lago de Juruti Velho.
+              </p>
+              <p class="place__paragraph">
+                Além disso, Juruti possui uma forte herança cultural, com festas
+                populares como o Carnaval, que reúne moradores e turistas. A
+                cidade abriga comunidades ribeirinhas que preservam as tradições
+                locais, tornando-a um destino único na Amazônia.
+              </p>
+            </div>
+            <a
+              class="place__frame"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              target="_blank"
+              >Compre esta obra de arte como NFT</a
+            >
+          </div>
+        </section>
       </main>
       <footer class="footer">
-        <p class="footer__copyright">© 2024. Digite seu nome</p>
+        <p class="footer__copyright">© 2024. Felipe Costa</p>
       </footer>
     </div>
   </body>
