--- a/index.html
+++ b/index.html
@@ -51,44 +51,40 @@
           </p>
         </section>
         <section class="photo-grid">
+          <img class="photo-grid__image" src="./images/" alt="paisagem" />
           <img
             class="photo-grid__image"
-            src="./images/image-1.svg"
+            src="./images/image-2.png"
             alt="paisagem"
           />
           <img
             class="photo-grid__image"
-            src="./images/image-2.svg"
+            src="./images/image-3..png"
             alt="paisagem"
           />
           <img
             class="photo-grid__image"
-            src="./images/image-3.svg"
+            src="./images/image-4..png"
             alt="paisagem"
           />
           <img
             class="photo-grid__image"
-            src="./images/image-4.svg"
+            src="./images/image-5..png"
             alt="paisagem"
           />
           <img
             class="photo-grid__image"
-            src="./images/image-5.svg"
+            src="./images/image-6..png"
             alt="paisagem"
           />
           <img
             class="photo-grid__image"
-            src="./images/image-6.svg"
+            src="./images/image-7..png"
             alt="paisagem"
           />
           <img
             class="photo-grid__image"
-            src="./images/image-7.svg"
-            alt="paisagem"
-          />
-          <img
-            class="photo-grid__image"
-            src="./images/image-8.svg"
+            src="./images/image-8..png"
             alt="paisagem"
           />
         </section>
@@ -107,7 +103,7 @@
             </div>
             <img
               class="place__image"
-              src="./images/city-1.svg"
+              src="./images/city-1.png"
               alt="imagem da cidade de Criccieth"
             />
             <div class="place__text_div">
@@ -151,7 +147,7 @@
 
             <img
               class="place__image"
-              src="./images/city-2.svg"
+              src="./images/city-2.png"
               alt="imagem da cidade de Berea"
             />
 
@@ -194,7 +190,7 @@
 
             <img
               class="place__image"
-              src="./images/city-3.svg"
+              src="./images/city-3.png"
               alt="imagem da cidade de Muramvya"
             />
 
