--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
           </p>
         </section>
         <section class="photo-grid">
-          <img class="photo-grid__image" src="./images/" alt="paisagem" />
+          <img
+            class="photo-grid__image"
+            src="./images/image-1.png"
+            alt="paisagem"
+          />
           <img
             class="photo-grid__image"
             src="./images/image-2.png"
@@ -59,32 +63,32 @@
           />
           <img
             class="photo-grid__image"
-            src="./images/image-3..png"
+            src="./images/image-3.png"
             alt="paisagem"
           />
           <img
             class="photo-grid__image"
-            src="./images/image-4..png"
+            src="./images/image-4.png"
             alt="paisagem"
           />
           <img
             class="photo-grid__image"
-            src="./images/image-5..png"
+            src="./images/image-5.png"
             alt="paisagem"
           />
           <img
             class="photo-grid__image"
-            src="./images/image-6..png"
+            src="./images/image-6.png"
             alt="paisagem"
           />
           <img
             class="photo-grid__image"
-            src="./images/image-7..png"
+            src="./images/image-7.png"
             alt="paisagem"
           />
           <img
             class="photo-grid__image"
-            src="./images/image-8..png"
+            src="./images/image-8.png"
             alt="paisagem"
           />
         </section>
