--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
         <section class="places">
           <div class="place">
             <h2 class="place__title">Criccieth, País de Gales</h2>
-
-            <div class="place__website_div">
+            <div class="place__website">
               <p class="place__artist place__artist_title">Artistas</p>
               <p class="place__artist place__artist_text">
                 Steffan Warren, editor-chefe
@@ -110,7 +109,7 @@
               src="./images/city-1.png"
               alt="imagem da cidade de Criccieth"
             />
-            <div class="place__text_div">
+            <div class="place__text">
               <p class="place__paragraph">
                 A ruína medieval do Castelo de Cricieth tem vista para a cidade
                 abaixo de uma rocha que se projeta para o mar. Acredita-se que
@@ -139,10 +138,9 @@
           </div>
 
           <div class="place">
-            <div class="place__title_div">
-              <h2 class="place__title">Berea, EUA</h2>
-            </div>
-            <div class="place__website_div">
+            <h2 class="place__title">Berea, EUA</h2>
+
+            <div class="place__website">
               <p class="place__artist place__artist_title">Artistas</p>
               <p class="place__artist place__artist_text">
                 Travis Turner, autor e editor
@@ -155,7 +153,7 @@
               alt="imagem da cidade de Berea"
             />
 
-            <div class="place__text_div">
+            <div class="place__text">
               <p class="place__paragraph">
                 Berea é uma pequena cidade localizada na parte central do
                 Kentucky. A cidade é cercada por belas florestas e campos. É
@@ -182,10 +180,9 @@
             >
           </div>
           <div class="place">
-            <div class="place__title_div">
-              <h2 class="place__title">Muramvya, Burundi</h2>
-            </div>
-            <div class="place__website_div">
+            <h2 class="place__title">Muramvya, Burundi</h2>
+
+            <div class="place__website">
               <p class="place__artist place__artist_title">Artistas</p>
               <p class="place__artist place__artist_text">
                 Grevisse Kenguruka, editor técnico
@@ -198,7 +195,7 @@
               alt="imagem da cidade de Muramvya"
             />
 
-            <div class="place__text_div">
+            <div class="place__text">
               <p class="place__paragraph">
                 Muramvya é uma das 18 províncias de Burundi. Na era do reino,
                 Muramvya era a capital real e em 2007, por causa de sua paisagem
@@ -232,10 +229,9 @@
             >
           </div>
           <div class="place">
-            <div class="place__title_div">
-              <h2 class="place__title">Juruti, Brasil</h2>
-            </div>
-            <div class="place__website_div">
+            <h2 class="place__title">Juruti, Brasil</h2>
+
+            <div class="place__website">
               <p class="place__artist place__artist_title">Artistas</p>
               <p class="place__artist place__artist_text">
                 Felipe Costa, Desenvolvedor
@@ -248,7 +244,7 @@
               alt="imagem da cidade de Juruti"
             />
 
-            <div class="place__text_div">
+            <div class="place__text">
               <p class="place__paragraph">
                 Juruti, no Pará, é conhecida por sua rica biodiversidade e pela
                 produção de bauxita, mineral utilizado na fabricação de
