--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               </p>
             </div>
             <a
-              class="place__frame"
+              class="place__botton"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
               target="_blank"
               >Compre esta obra de arte como NFT</a
@@ -173,7 +173,7 @@
               </p>
             </div>
             <a
-              class="place__frame"
+              class="place__botton"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
               target="_blank"
               >Compre esta obra de arte como NFT</a
@@ -222,7 +222,7 @@
               </p>
             </div>
             <a
-              class="place__frame"
+              class="place__botton"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
               target="_blank"
               >Compre esta obra de arte como NFT</a
@@ -261,7 +261,7 @@
               </p>
             </div>
             <a
-              class="place__frame"
+              class="place__botton"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
               target="_blank"
               >Compre esta obra de arte como NFT</a
